--- a/app/src/main/res/layout/activity_ipscan.xml
+++ b/app/src/main/res/layout/activity_ipscan.xml
@@ -42,7 +42,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Meteostaions"
+                android:text="Meteostation"
                 android:id="@+id/loginText"
                 android:textSize="36sp"
                 android:textAlignment="center"
