--- a/app/src/main/res/menu/menu_items.xml
+++ b/app/src/main/res/menu/menu_items.xml
@@ -1,13 +1,15 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+        <item
+            android:id="@+id/action_profile"
+            android:icon="@drawable/ic_account"
+            android:title="Profile"
+            app:showAsAction="ifRoom" />
         <item
             android:id="@+id/action_settings"
             android:title="Settings"
-            android:icon="@drawable/ic_settings">
+            android:icon="@drawable/ic_settings"
+            app:showAsAction="always">
         </item>
-        <item
-            android:title="About app"
-            android:icon="@drawable/info">
-        </item>
-    </group>
 </menu>
