--- a/app/src/main/res/layout/activity_units_settings.xml
+++ b/app/src/main/res/layout/activity_units_settings.xml
@@ -37,18 +37,178 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
-            android:padding="14dp">
+            android:padding="14dp"
+            android:gravity="center_horizontal">
 
-            <ListView
-                android:id="@+id/listviewunits"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:listitem="@layout/item_unit"
-                android:scrollbars="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:text="Temperature">
+            </TextView>
+            <RadioGroup
+                android:id="@+id/radioGroup_temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioBtn1_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="°F"/>
+                <RadioButton
+                    android:id="@+id/radioBtn2_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="°C"/>
+                <RadioButton
+                    android:id="@+id/radioBtn3_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="K"/>
+            </RadioGroup>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:text="Pressure">
+            </TextView>
+            <RadioGroup
+                android:id="@+id/radioGroup_press"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioBtn1_press"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="inHg"/>
+                <RadioButton
+                    android:id="@+id/radioBtn2_press"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="hPa"/>
+                <RadioButton
+                    android:id="@+id/radioBtn3_press"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="mmHg"/>
+                <RadioButton
+                    android:id="@+id/radioBtn4_press"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="atm"/>
+                <RadioButton
+                    android:id="@+id/radioBtn5_press"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="bar"/>
+            </RadioGroup>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:text="Wind gust">
+            </TextView>
+            <RadioGroup
+                android:id="@+id/radioGroup_wind"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioBtn1_wind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="m/s"/>
+                <RadioButton
+                    android:id="@+id/radioBtn2_wind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="km/h"/>
+                <RadioButton
+                    android:id="@+id/radioBtn3_wind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="mph"/>
+                <RadioButton
+                    android:id="@+id/radioBtn4_wind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="knot"/>
+            </RadioGroup>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:text="Rain">
+            </TextView>
+            <RadioGroup
+                android:id="@+id/radioGroup_rain"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioBtn1_rain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="mm"/>
+                <RadioButton
+                    android:id="@+id/radioBtn2_rain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="cm"/>
+                <RadioButton
+                    android:id="@+id/radioBtn3_rain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="in"/>
+            </RadioGroup>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:text="Solar radiation">
+            </TextView>
+            <RadioGroup
+                android:id="@+id/radioGroup_solar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioBtn1_solar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="W/m²"/>
+                <RadioButton
+                    android:id="@+id/radioBtn2_solar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="lux"/>
+            </RadioGroup>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:text="Humidity">
+            </TextView>
+            <RadioGroup
+                android:id="@+id/radioGroup_hum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioBtn1_hum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="%"/>
+            </RadioGroup>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
