--- a/app/src/main/res/layout/item_json_object.xml
+++ b/app/src/main/res/layout/item_json_object.xml
@@ -5,15 +5,14 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
-    app:cardBackgroundColor="#80FFFFFF">
+    app:cardBackgroundColor="#90FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
-        android:background="#80FFFFFF"
-        >
+        android:background="#90FFFFFF">
 
         <TextView
             android:id="@+id/keyTextView"
@@ -21,14 +20,49 @@
             android:layout_height="wrap_content"
             android:text="Key"
             android:textStyle="bold"
-            android:textSize="26dp"/>
+            android:textSize="26dp" />
 
         <TextView
             android:id="@+id/valueTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Value"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:layout_marginBottom="8dp"/>
 
+        <!-- Přidání dalších tří TextView pro min, max, avg -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/minTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Min"
+                android:textColor="#FF0000"
+                android:textSize="13dp" />
+
+            <TextView
+                android:id="@+id/maxTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Max"
+                android:textColor="#006400"
+                android:textSize="13dp" />
+
+            <TextView
+                android:id="@+id/avgTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Avg"
+                android:textColor="#0000FF"
+                android:textSize="13dp" />
+
+        </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
