--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -34,12 +34,18 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_account"/>
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/imageview_acc"
+                    android:layout_width="180dp"
+                    android:layout_height="180dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:background="@color/light_blue"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_account"
+                    app:shapeAppearanceOverlay="@style/circular"
+                    app:strokeColor="@color/white"
+                    app:strokeWidth="5dp" />
 
             <TextView
                 android:id="@+id/account"
@@ -51,7 +57,6 @@
                 android:textColor="@color/white"
                 android:textSize="30sp"
                 android:textStyle="bold" />
-
             <LinearLayout
                 android:background="@drawable/round_back_white"
                 android:layout_width="match_parent"
@@ -102,7 +107,7 @@
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:padding="12dp"
-                        android:src="@drawable/baseline_apps_24"
+                        android:src="@drawable/gallery"
                         android:id="@+id/base"
                         android:background="@drawable/round_lock_violet">
                     </ImageView>
@@ -113,11 +118,11 @@
                         android:layout_centerVertical="true"
                         android:textStyle="bold"
                         android:textColor="@color/white"
-                        android:text="GridLayout"
+                        android:text="Basic backgroud"
                         android:layout_toEndOf="@+id/base">
                     </TextView>
                     <Switch
-                        android:id="@+id/grid_layout_switch"
+                        android:id="@+id/picture_layout_switch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
@@ -199,36 +204,6 @@
                         android:onClick="onBackArrowClicked_API">
                     </ImageView>
                 </RelativeLayout>
-                <RelativeLayout
-                    android:layout_marginTop="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:padding="12dp"
-                        android:src="@drawable/internet"
-                        android:id="@+id/languange"
-                        android:background="@drawable/round_lock_violet">
-                    </ImageView>
-                    <TextView
-                        android:layout_marginStart="20dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:text="Language"
-                        android:layout_toEndOf="@+id/languange">
-                    </TextView>
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/arrow_point_to_right">
-                    </ImageView>
-                </RelativeLayout>
             </LinearLayout>
             <LinearLayout
                 android:background="@drawable/round_back_white"
@@ -266,7 +241,7 @@
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
                         android:src="@drawable/arrow_point_to_right"
-                        android:onClick="onBackArrowClicked">
+                        android:onClick="onBackArrowClicked_About">
 
                     </ImageView>
                 </RelativeLayout>
