--- a/app/src/main/res/layout/weather_widget.xml
+++ b/app/src/main/res/layout/weather_widget.xml
@@ -2,6 +2,7 @@
     style="@style/Widget.MyApplication.AppWidget.Container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/violet"
     android:theme="@style/Theme.MyApplication.AppWidgetContainer">
 
     <FrameLayout
@@ -10,7 +11,7 @@
         android:layout_centerHorizontal="true"
         android:id="@+id/widget_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,6 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onTextClick"
+                android:textColor="@color/black"
                 android:text="Key"
                 android:textSize="26dp"
                 android:textStyle="bold" />
@@ -33,43 +35,52 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:textColor="@color/black"
                 android:text="Value"
                 android:textSize="20dp" />
 
-            <!-- Přidání dalších tří TextView pro min, max, avg -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/minTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Min"
-                    android:textColor="#FF0000"
-                    android:textSize="13dp" />
-
-                <TextView
-                    android:id="@+id/maxTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Max"
-                    android:textColor="#006400"
-                    android:textSize="13dp" />
-
-                <TextView
-                    android:id="@+id/avgTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Avg"
-                    android:textColor="#0000FF"
-                    android:textSize="13dp" />
-
-            </LinearLayout>
         </LinearLayout>
+
     </FrameLayout>
+
+    <!-- Přidání dalších tří TextView pro min, max, avg -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:paddingBottom="16dp">
+
+        <TextView
+            android:id="@+id/minTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Min"
+            android:textColor="#FF0000"
+            android:textSize="13dp"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/maxTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Max"
+            android:textColor="#006400"
+            android:textSize="13dp"
+            android:gravity="center"/>
+
+        <TextView
+            android:id="@+id/avgTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Avg"
+            android:textColor="#0000FF"
+            android:textSize="13dp"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
