--- a/app/src/main/res/layout/weather_widget_configure.xml
+++ b/app/src/main/res/layout/weather_widget_configure.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/mountain3">
 
     <TextView
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:textSize="30dp"
         android:text="@string/configure" />
 
     <Spinner
@@ -18,6 +21,8 @@
         android:layout_marginBottom="8dp" />
 
     <Button
+        android:textColor="@color/white"
+        android:layout_gravity="center"
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
