--- a/app/src/main/res/xml/weather_widget_info.xml
+++ b/app/src/main/res/xml/weather_widget_info.xml
@@ -6,10 +6,10 @@
     android:initialLayout="@layout/weather_widget"
     android:minWidth="110dp"
     android:minHeight="110dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/widget_prev"
     android:previewLayout="@layout/weather_widget"
     android:resizeMode="horizontal|vertical"
-    android:targetCellWidth="2"
-    android:targetCellHeight="2"
+    android:targetCellWidth="1"
+    android:targetCellHeight="1"
     android:updatePeriodMillis="600000"
     android:widgetCategory="home_screen" />
