--- a/app/src/main/res/layout/activity_api_server.xml
+++ b/app/src/main/res/layout/activity_api_server.xml
@@ -29,9 +29,11 @@
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
+            android:id="@+id/parentLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -105,9 +107,11 @@
                 </RelativeLayout>
 
                 <RelativeLayout
+                    android:id="@+id/test_api_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
+                    android:layout_marginTop="10dp"
+                    android:visibility="invisible">
 
                     <ImageView
                         android:id="@+id/languange"
@@ -140,6 +144,8 @@
     </ScrollView>
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardView_result"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
@@ -158,7 +164,42 @@
             android:padding="16dp"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp"
-            android:text="Test Result"
+            android:text=""
+            android:textStyle="bold"
+            android:gravity="center"/>
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp" />
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardView_result_FInal"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        app:layout_constraintTop_toBottomOf="@id/cardView_result"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp">
+
+        <TextView
+            android:id="@+id/textView_result_final"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="30sp"
+            android:text="FINAL RESULT"
             android:textStyle="bold"
             android:gravity="center"/>
 
