--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,8 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="Not yet registered? SignUp Now"
-        android:textSize="14sp"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:textAlignment="center"
         android:id="@+id/signupText"
         android:textColor="@color/white"
