--- a/app/src/main/res/layout/activity_weather_layout.xml
+++ b/app/src/main/res/layout/activity_weather_layout.xml
@@ -74,6 +74,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.889"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp">
     </Button>
