--- a/app/src/main/res/layout/item_json_object.xml
+++ b/app/src/main/res/layout/item_json_object.xml
@@ -20,14 +20,15 @@
             android:layout_height="wrap_content"
             android:text="Key"
             android:textStyle="bold"
-            android:textSize="26dp" />
+            android:textSize="22dp" />
 
         <TextView
             android:id="@+id/valueTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Value"
-            android:textSize="20dp"
+            android:textSize="30dp"
+            android:textStyle="bold"
             android:layout_marginBottom="8dp"/>
 
         <!-- Přidání dalších tří TextView pro min, max, avg -->
@@ -37,6 +38,8 @@
             android:orientation="horizontal">
 
             <TextView
+                android:textStyle="bold"
+                android:gravity="center"
                 android:id="@+id/minTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -46,6 +49,8 @@
                 android:textSize="13dp" />
 
             <TextView
+                android:textStyle="bold"
+                android:gravity="center"
                 android:id="@+id/maxTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -55,6 +60,8 @@
                 android:textSize="13dp" />
 
             <TextView
+                android:textStyle="bold"
+                android:gravity="center"
                 android:id="@+id/avgTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
