--- a/app/src/main/res/xml/weather_widget_info.xml
+++ b/app/src/main/res/xml/weather_widget_info.xml
@@ -4,11 +4,11 @@
     android:description="@string/app_widget_description"
     android:initialKeyguardLayout="@layout/weather_widget"
     android:initialLayout="@layout/weather_widget"
-    android:minWidth="110dp"
+    android:minWidth="250dp"
     android:minHeight="110dp"
-    android:previewImage="@drawable/widget_prev"
+    android:previewImage="@drawable/widget_prev_new"
     android:previewLayout="@layout/weather_widget"
-    android:resizeMode="horizontal|vertical"
+    android:resizeMode="none"
     android:targetCellWidth="1"
     android:targetCellHeight="1"
     android:updatePeriodMillis="600000"
