--- a/app/src/main/res/drawable/rounded_corner_black.xml
+++ b/app/src/main/res/drawable/rounded_corner_black.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp">
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#80000000" />
     <corners android:radius="20dp" />
 </shape>
