--- a/app/src/main/res/layout/activity_units_settings.xml
+++ b/app/src/main/res/layout/activity_units_settings.xml
@@ -105,7 +105,7 @@
                     android:id="@+id/radioBtn5_press"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="bar"/>
+                    android:text="mbar"/>
             </RadioGroup>
             <TextView
                 android:layout_width="wrap_content"
