--- a/app/src/main/res/layout/item_json_object.xml
+++ b/app/src/main/res/layout/item_json_object.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Value"
-            android:textSize="30dp"
+            android:textSize="34dp"
             android:textStyle="bold"
             android:layout_marginBottom="8dp"/>
 
@@ -44,9 +44,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="Min"
-                android:textColor="#FF0000"
-                android:textSize="13dp" />
+                android:textColor="#0000FF"
+                android:textSize="16dp" />
 
             <TextView
                 android:textStyle="bold"
@@ -55,9 +57,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="Max"
-                android:textColor="#006400"
-                android:textSize="13dp" />
+                android:textColor="#FF0000"
+                android:textSize="16dp" />
 
             <TextView
                 android:textStyle="bold"
@@ -66,9 +70,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:ellipsize="end"
+                android:maxLines="1"
                 android:text="Avg"
-                android:textColor="#0000FF"
-                android:textSize="13dp" />
+                android:textColor="#006400"
+                android:textSize="16dp" />
 
         </LinearLayout>
     </LinearLayout>
