--- a/app/src/main/res/layout/activity_history_data.xml
+++ b/app/src/main/res/layout/activity_history_data.xml
@@ -125,4 +125,16 @@
 
     </androidx.cardview.widget.CardView>
 
+    <Button
+        android:id="@+id/button_calendar"
+        android:layout_width="0dp"
+        android:layout_height="52dp"
+        android:layout_marginBottom="0dp"
+        android:text="Pick calendar data"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"></Button>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
