--- a/app/src/main/res/layout/activity_history_data.xml
+++ b/app/src/main/res/layout/activity_history_data.xml
@@ -92,49 +92,44 @@
             android:layout_gravity="center">
 
             <TextView
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/rounded_color_white"
                 android:id="@+id/text_min"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="MIN"
-                android:textColor="@color/white"
+                android:textColor="#FF0000"
                 android:textSize="20dp"
                 android:gravity="center"/>
 
             <TextView
-                android:id="@+id/text_max"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="MAX"
-                android:textColor="@color/white"
-                android:textSize="20dp"
-                android:gravity="center"/>
-
-            <TextView
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/rounded_color_white"
                 android:id="@+id/text_avg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="AVG"
-                android:textColor="@color/white"
+                android:textColor="#0000FF"
+                android:textSize="20dp"
+                android:gravity="center"/>
+
+            <TextView
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/rounded_color_white"
+                android:id="@+id/text_max"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="MAX"
+                android:textColor="#006400"
                 android:textSize="20dp"
                 android:gravity="center"/>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-    <Button
-        android:id="@+id/button_calendar"
-        android:layout_width="0dp"
-        android:layout_height="52dp"
-        android:layout_marginBottom="0dp"
-        android:text="Pick calendar data"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"></Button>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
