--- a/app/src/main/res/layout/activity_weather_layout.xml
+++ b/app/src/main/res/layout/activity_weather_layout.xml
@@ -112,32 +112,40 @@
             android:layout_gravity="center">
 
             <TextView
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/rounded_color_white"
                 android:id="@+id/text_min"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="MIN"
-                android:textColor="@color/white"
+                android:textColor="#0000FF"
                 android:textSize="20dp"
                 android:gravity="center"/>
 
-            <TextView
-                android:id="@+id/text_max"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="MAX"
-                android:textColor="@color/white"
-                android:textSize="20dp"
-                android:gravity="center"/>
 
             <TextView
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/rounded_color_white"
                 android:id="@+id/text_avg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="AVG"
-                android:textColor="@color/white"
+                android:textColor="#006400"
+                android:textSize="20dp"
+                android:gravity="center"/>
+
+            <TextView
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/rounded_color_white"
+                android:id="@+id/text_max"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="MAX"
+                android:textColor="#FF0000"
                 android:textSize="20dp"
                 android:gravity="center"/>
 
