--- a/app/src/main/res/layout/activity_history_data.xml
+++ b/app/src/main/res/layout/activity_history_data.xml
@@ -55,7 +55,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="@string/select"
+        android:hint="Select interval"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cardView"
